# buit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  OSINT_TOOLS_COMPARISON.md  README.md  USAGE.md  build.rs  report.html
.claude/: settings.local.json
.github/workflows/: build.yml
logs/: buit.log.2025-09-11
src/: assets.rs  cli.rs  main.rs  setup.rs
src/config/: manage.rs  mod.rs
src/modules/: api.rs  asn_lookup.rs  autoupdater.rs  breach_check.rs  domain.rs  dork.rs  email.rs  geoip.rs  github.rs  hash.rs  interactive.rs  ip.rs  leaks.rs  metadata.rs  mod.rs  phone.rs  portscan.rs  report.rs  reverse_dns.rs  reverse_image.rs  search.rs  shodan.rs  social.rs  ssl_cert_simple.rs  subdomain.rs  urlscan.rs  username.rs  wayback.rs  whois.rs
src/utils/: asn.rs  dns.rs  http.rs  json.rs  mod.rs
