[package]
name = "buit"
version = "1.0.4"
edition = "2021"
description = "BUIT - Buu Undercover Intelligence Toolkit - Advanced OSINT framework for security professionals"
license = "MIT"
authors = ["BuuDevOff <buudevoff@example.com>"]
repository = "https://github.com/BuuDevOff/BUIT"
homepage = "https://github.com/BuuDevOff/BUIT"
documentation = "https://github.com/BuuDevOff/BUIT/wiki"
keywords = ["osint", "security", "intelligence", "reconnaissance", "cybersecurity"]
categories = ["command-line-utilities", "network-programming", "web-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
regex = "1.10"
scraper = "0.20"
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
dirs = "5.0"
indicatif = "0.17"
futures = "0.3"
futures-util = "0.3"
base64 = "0.22"
sha2 = "0.10"
blake3 = "1.5"
urlencoding = "2.1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
figlet-rs = "0.1"
trust-dns-resolver = "0.23"
kamadak-exif = "0.5"
lopdf = "0.34"
dialoguer = "0.11"
comfy-table = "7.1"
handlebars = "6.2"
ipnetwork = "0.20"
whois = "0.1"
hex = "0.4"
rayon = "1.8"
mimalloc = "0.1"
simd-json = { version = "0.14", optional = true }
maxminddb = "0.24"
dotenvy = "0.15"
img_hash = "3.2"
lofty = "0.21"
sha1 = "0.10"
md-5 = "0.10"

[features]
default = []
fast-json = ["simd-json"]